# calvin

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_chat.md  DOCKER_SETUP.md  INTEGRATION_README.md  MCP_REFACTORING_SUMMARY.md  POSTGRES_INTEGRATION.md  PROMPTS.md  README.md  add_stock.sh  api_security_fix_summary.py  batch_curate_all_sp500.py  check_aapl_data.py  clear_fake_data.py  clear_non_aapl_data.py  company_search_test.html  complete_sp500_research.py  config.example.json  create_real_aapl_data.py  curate_nasdaq_earnings.py  curate_single_stock.py  curate_stock_data.py  debug_MSFT_earnings.html  debug_MSFT_script_3.js  debug_MSFT_script_68.js  debug_MSFT_script_70.js  debug_nasdaq.py  docker-compose.yml  earnings_dashboard.html  earnings_ingestion.py  fetch_sp500.py  final_sp500_batch.py  final_verification.html  fix_api_key_exposure.py  ingest_verified_earnings.py  kafka_consumer_api.py  kafka_producer.py  main.py  main_client_old.py  (+38 more)
agents/: Dockerfile  analysis_agent.py  prediction_agent.py  query_agent.py  research_agent.py
backend/: Dockerfile  Dockerfile.simple  requirements.txt
backend/app/: main.py  mcp_client.py  simple_main.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/models/: embeddings.py
backend/app/schemas/: earnings.py
backend/app/services/: agent_orchestrator.py  analytics_service.py  prediction_service.py
config/: api_keys.env.example  export_api_keys.sh
deprecated/: DATA_COLLECTION_REPORT.md  README.md  finance_server.py  main_client.py  mcp_client.py  pyproject.toml  sentiment_analysis_server.py  test_mcp_pattern.py
deprecated/agents/: base_agent.py
deprecated/assets/sp500_companies/: A.json  AAPL.json  ABBV.json  ABNB.json  ABT.json  ACGL.json  ACN.json  ADBE.json  ADI.json  ADM.json  ADP.json  ADSK.json  AEE.json  AEP.json  AES.json  AFL.json  AIG.json  AIZ.json  AJG.json  AKAM.json  ALB.json  ALGN.json  ALL.json  ALLE.json  AMAT.json  AMCR.json  AMD.json  AME.json  AMGN.json  (+292 more)
deprecated/config/: api_keys.env  mcp_servers.json
deprecated/frontend/: nginx.conf
deprecated/mcp_servers/: company_server.py  prediction_server.py
deprecated/scripts/: complete_sp500_load.py  load_sp500_data.py  load_sp500_json.py
docker/: finance-server.Dockerfile  sentiment-server.Dockerfile
docker/postgres/: init.sql
earnings-icons/: AAPL.json  ABBV.json  ABT.json  ACGL.json  ACN.json  ADBE.json  AFL.json  AKAM.json  ALB.json  ALGN.json  ALLE.json  AMAT.json  AMD.json  AME.json  AMGN.json  AMT.json  AMZN.json  ANSS.json  AON.json  AOS.json  APA.json  APH.json  APO.json  APTV.json  ARE.json  ATO.json  AVGO.json  AWK.json  AXP.json  BA.json  BAC.json  BBY.json  BG.json  BIIB.json  BKNG.json  BKR.json  BLK.json  BMY.json  BR.json  BRK.B.json  (+246 more)
frontend/: Dockerfile  package.json  tailwind.config.js
frontend/src/: index.tsx
init-db/: 01-init-schema.sql
mcp_servers/: earnings_server.py
research/: CLAUDE.md  PLANNING.md  README.md  README_CURATOR.md  TASK.md  batch_progress.json  batch_runner.py  collection_summary.json  data_processor.py  earnings_collector.py  earnings_curator.py  earnings_data_models.py  earnings_schema.py  error_handler.py  improved_nasdaq_scraper.py  nasdaq_data_scraper.py  nasdaq_scraper.py  requirements.txt  run_curator.py  sp500_companies.json  sp500_processor.py  validate_template.py
research/curated_earnings/: A.json  AAPL.json  ABBV.json  ABNB.json  ABT.json  ACN.json  ADBE.json  ADI.json  ADM.json  ADP.json  ADSK.json  AEE.json  AEP.json  AES.json  AIG.json  AIZ.json  AJG.json  ALL.json  AMCR.json  AMD.json  AMP.json  AMZN.json  ANET.json  AOS.json  APD.json  AVB.json  AVGO.json  AVY.json  AXON.json  AZO.json  BAC.json  BALL.json  BAX.json  BDX.json  BEN.json  BF.B.json  BK.json  BLDR.json  BMY.json  BRK.B.json  (+235 more)
research/earnings_data/: A.json  ABBV.json  ABNB.json  ABT.json  ACN.json  ADBE.json  AES.json  AFL.json  AKAM.json  ALB.json  ALGN.json  ALL.json  ALLE.json  AMD.json  AOS.json  APD.json  ARE.json  GOOGL.json  LNT.json  MMM.json
research/multi_test/: AAPL.json  MSFT.json  curation_summary.json
research/my_earnings/: AAPL.json  curation_summary.json
research/sample_earnings_data/: AAPL.json  GOOGL.json  MSFT.json
research/test_output/: AAPL.json  curation_summary.json
research/tests/: __init__.py  test_data_processor.py  test_earnings_collection.py  test_earnings_curator.py  test_earnings_schema.py  test_error_handler.py
scripts/: check_api_keys.py  fix_docker_permissions.sh  init_system.sh  start_docker.sh
src/: dashboard-integration.ts  mcp-config.ts  ollama-client.ts
web/: index.html
(+19 files in other folders)
