[project]
name = "calvin-stock-prediction"
version = "0.1.0"
description = "AI-powered stock market prediction tool for S&P 500 earnings analysis"
authors = [
    { name = "Calvin Stock Prediction Tool", email = "calvin@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "httpx>=0.25.2",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "fastmcp>=0.1.0",
    "mcp>=1.0.0",
    "yfinance>=0.2.18",
    "textblob>=0.17.1",
    "requests>=2.31.0",
    "aiohttp>=3.9.1",
    "pandas>=2.1.4",
    "numpy>=1.24.4",
    "python-dateutil>=2.8.2",
    "ollama>=0.5.1",
]

[project.scripts]
calvin = "calvin_main:main"

[project.urls]
Homepage = "https://github.com/calvin-stock-prediction/calvin"
Repository = "https://github.com/calvin-stock-prediction/calvin"
Documentation = "https://github.com/calvin-stock-prediction/calvin#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "coverage>=7.3.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "calvin_main.py",
    "calvin_mcp_client.py",
    "packages/*/server.py",
    "packages/*/package.json",
    "web/",
    "assets/",
    "start.sh",
    "README.md",
    "requirements.txt",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
asyncio_mode = "auto"
